@@ -62,6 +62,10 @@ Identical to the \fBquit\fR command.
 Display a description of sreport options and commands.
 
 .TP
+\fBnonparsable\fP
+Return output to normal after parsable or parsable2 has been set.
+
+.TP
 \fBparsable\fP
 Output will be | delimited with an ending '|'.
 
