@@ -1863,11 +1863,9 @@ js_pg_get_jobs_cond(pgsql_conn_t *pg_conn, uid_t uid,
 				atoi(ROW2(STEP_REQ_USER_USEC));
 			step->sys_cpu_sec = atoi(ROW2(STEP_REQ_SYS_SEC));
 			step->sys_cpu_usec = atoi(ROW2(STEP_REQ_SYS_USEC));
-			job->tot_cpu_sec +=
-				step->tot_cpu_sec +=
+			step->tot_cpu_sec +=
 				step->user_cpu_sec + step->sys_cpu_sec;
-			job->tot_cpu_usec +=
-				step->tot_cpu_usec +=
+			step->tot_cpu_usec +=
 				step->user_cpu_usec + step->sys_cpu_usec;
 			step->stats.vsize_max =
 				atoi(ROW2(STEP_REQ_MAX_VSIZE));
